# activity-tracker

./: .gitignore  package-lock.json  package.json
src/: Analytics.tsx  App.svelte  App.tsx  Settings.tsx  index.css  lib.rs  types.ts
src-tauri/: Cargo.toml  chronos.db  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: category.rs  commands.rs  database.rs  lib.rs  main.rs  menu.rs  tracker.rs
src/components/: Dashboard.tsx
src/lib/: events.ts  stores.ts
src/services/: activityService.ts
src/styles/: Dashboard.css  theme.css
src/types/: activity.ts
src/utils/: timeUtils.ts
